# EngageMint

./: Cargo.toml  README.md  package-lock.json
Smart Contract/: Cargo.toml  lib.rs
Smart Contract/ink files/: ishowspeed_token.contract  ishowspeed_token.wasm
backend/: index.js  package-lock.json  package.json
contract/sol_files/: token.sol
contracts/governance/: Cargo.toml  lib.rs
contracts/ishowspeed_token/: Cargo.toml  lib.rs
contracts/minting/: Cargo.toml  lib.rs
crx/: package-lock.json  package.json
crx/entrypoints/popup/: index.html
ext/: package-lock.json  package.json  wxt.config.ts
ext/entrypoints/: content.ts
ext/entrypoints/popup/: App.css  App.tsx  main.tsx  style.css
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Item.css  Item.jsx  NavBar.css  NavBar.jsx  Post.jsx  Video.jsx  index.css  main.jsx
frontend/src/components/comment/: Comment.jsx
frontend/src/components/footer/: Footer.css  Footer.jsx
frontend/src/components/item/: Item.css
frontend/src/components/navBar/: NavBar.css  NavBar.jsx
frontend/src/components/post/: Post.css  Post.jsx
frontend/src/components/video/: Video.jsx
frontend/src/pages/community/: Community.css  Community.jsx
frontend/src/pages/exclusiveContent/: ExclusiveContent.css  ExclusiveContent.jsx
frontend/src/pages/gatedContent/: GatedContent.jsx
smart contracts/: CreatorGovernor.sol  CreatorRegistry.sol  CreatorToken.sol  CreatorTokenFactory.sol  PerkMarketplace.sol  RewardDistributor.sol  Treasury.sol  deploy.ts  hardhat.config.ts  verify.ts
(+16 files in other folders)
