[package]
name = "governance"
version = "0.1.0"
authors = ["EngageMint Developers"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
ishowspeed_token = { path = "../ishowspeed_token", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "ishowspeed_token/std",
]
ink-as-dependency = []